force-app/main/default/objects/AIDataSource__c/AIDataSource__c.object-meta.xml
<CustomObject>
    <description>Defines a reusable, read-only data retrieval capability - backed by SOQL or Apex - that the AI can call autonomously during a conversation to gather record data, metadata, or knowledge-base content needed to answer a question.</description>
    <label>AI Data Source</label>
    <nameField>
        <displayFormat>AI Data Source - {000000}</displayFormat>
        <label>AI Data Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>🗄️ AI Data Sources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>