force-app/main/default/objects/AIDataSource__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>The fully qualified name of the Apex class to invoke, used when Source Type is Apex.</description>
    <inlineHelpText>Required if Source Type is Apex. The class must implement the shared data source interface.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>