force-app/main/default/objects/AIDataSource__c/fields/BindingType__c.field-meta.xml
<CustomField>
    <fullName>BindingType__c</fullName>
    <description>Determines whether this data source requires a specific record to run against, or operates independently of any single record.</description>
    <inlineHelpText>Choose Bound if this source needs a record Id to run, such as querying a specific record&apos;s fields. Choose Unbound if it doesn&apos;t depend on a specific record, such as searching metadata or configuration across an object type.</inlineHelpText>
    <label>Binding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bound</fullName>
            </value>
            <value>
                <fullName>Unbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>