force-app/main/default/objects/AIDataSource__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Explains what this data source returns, shown to the AI when deciding whether to call it in the course of answering a question.</description>
    <inlineHelpText>Write a clear explanation of what this returns and when it&apos;s relevant. This is what the AI reads to decide whether to call it — be specific.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>