force-app/main/default/objects/AIDataSource__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>A unique, code-friendly identifier for this data source, used for direct reference in Apex or configuration rather than the display name.</description>
    <inlineHelpText>Use a short, unique, no-spaces identifier so this data source can be referenced reliably in code even if the display name changes.</inlineHelpText>
    <label>Developer Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>