force-app/main/default/objects/AIDataSource__c/fields/InputSchema__c.field-meta.xml
<CustomField>
    <fullName>InputSchema__c</fullName>
    <description>A JSON schema describing the parameters this data source expects.</description>
    <inlineHelpText>Define the inputs this source needs in JSON schema format, such as a record Id or field API name.</inlineHelpText>
    <label>Input Schema</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>