force-app/main/default/objects/AIDataSource__c/fields/OutputDescription__c.field-meta.xml
<CustomField>
    <fullName>OutputDescription__c</fullName>
    <description>A plain-language description of what this source returns, so the AI knows how to interpret the result.</description>
    <inlineHelpText>Describe the shape and meaning of the data this source returns, so the AI can use it correctly in its response.</inlineHelpText>
    <label>Output Description</label>
    <type>TextArea</type>
</CustomField>