force-app/main/default/objects/AIDataSource__c/fields/SOQLTemplate__c.field-meta.xml
<CustomField>
    <fullName>SOQLTemplate__c</fullName>
    <description>A parameterised SOQL query using bind variables, used when Source Type is SOQL.</description>
    <inlineHelpText>Required if Source Type is SOQL. Use bind variables for any inputs — never build queries by concatenating raw text, to avoid injection risk.</inlineHelpText>
    <label>SOQL Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>