force-app/main/default/objects/AIDataSource__c/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <description>The name admins see for this Data Source in the AI Assist console (the record Name is an auto-number). Developer Name stays the tool name the AI calls.</description>
    <inlineHelpText>A short, readable name such as &quot;Open Quotes&quot;.</inlineHelpText>
    <label>Source Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>