force-app/main/default/objects/AIDataSource__c/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <description>Determines which mechanism is used to retrieve data.</description>
    <inlineHelpText>Choose whether this source runs a parameterised SOQL query or an Apex class.</inlineHelpText>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>