force-app/main/default/objects/AIDataSource__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <description>The object this data source is scoped to.</description>
    <inlineHelpText>Enter the API name of the object this data source retrieves information about, such as Opportunity.</inlineHelpText>
    <label>Target Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>