force-app/main/default/objects/AIDataSource__c/validationRules/ApexClassRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ApexClassRequired</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(SourceType__c) = $Label.AI_Data_Source_Source_Type_Apex &amp;&amp; ISBLANK(ApexClassName__c)</errorConditionFormula>
    <errorDisplayField>ApexClassName__c</errorDisplayField>
    <errorMessage>Apex Class Name is required when Source Type is Apex.</errorMessage>
</ValidationRule>