force-app/main/default/objects/AIDataSource__c/validationRules/SOQLTemplateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SOQLTemplateRequired</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(SourceType__c) = $Label.AI_Data_Source_Source_Type_SOQL &amp;&amp; ISBLANK(SOQLTemplate__c)</errorConditionFormula>
    <errorDisplayField>SOQLTemplate__c</errorDisplayField>
    <errorMessage>SOQL Template is required when Source Type is SOQL.</errorMessage>
</ValidationRule>