force-app/main/default/objects/AIDataSource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>SourceType__c</columns>
    <columns>BindingType__c</columns>
    <columns>TargetObject__c</columns>
    <columns>ApexClassName__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>